[Update] Readme and User image

--- a/src/app/shared/components/sidebar/sidebar.component.html
+++ b/src/app/shared/components/sidebar/sidebar.component.html
@@ -4,7 +4,7 @@
             <h2>Ernesto Galdamez</h2>
             <h4>example@email.com</h4>
         </div>
-        <img src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Dogge">
+        <img src="../../../../assets/user.png" alt="Dogge">
     </div>
 
     <mat-divider></mat-divider>
