--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,26 @@
+// Import library functions for theme creation.
+@import "~@angular/material/theming";
+
+// Include non-theme styles for core.
+@include mat-core();
+
 /* You can add global styles to this file, and also import other style files */
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html,
+body {
+    height: 100%;
+}
+body {
+    margin: 0;
+    font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
+// Define the application's custom theme
+$primary: mat-palette($mat-blue);
+$accent: mat-palette($mat-pink, A200, A100, A400);
+$theme: mat-dark-theme($primary, $accent);
+
+// Regular (light theme)
+// Include theme styles for Angular Material components
+// and include theme styles for your custom components.
+@include angular-material-theme($theme);
